# kgnews

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kgnews/: __init__.py  app.py  main.py
src/kgnews/api/: __init__.py  client.py
src/kgnews/cache/: __init__.py  manager.py
src/kgnews/config/: __init__.py  manager.py
src/kgnews/models/: __init__.py  category.py  config.py  story.py
src/kgnews/ui/: __init__.py
src/kgnews/ui/screens/: __init__.py  config_screen.py  main_screen.py
src/kgnews/ui/widgets/: __init__.py  category_tabs.py  story_list.py
