[project]
name = "kgnews"
version = "0.1.0"
description = "A terminal-based news reader for Kagi News with keyboard-driven navigation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.85.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
kgnews = "kgnews.main:main"

[tool.uv]
package = true
